eck-on-rke2-ha-azure/files/kibana-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: elastic-system
spec:
  ingressClassName: nginx
  rules:
  - host: "${kibana_fqdn}"
    https:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: susedemo-kb-http
            port:
              number: 5601
